fixing scrolling pt1: overflow:auto

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
   font-family: "Roboto", sans-serif;
   scrollbar-width: thin;
   scrollbar-color: var(--orange) transparent;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 ::-webkit-scrollbar {
